# sdk-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_REVIEW.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  TEST_IMPROVEMENT.md  build.py  ci_logs_17270021185.txt  cross-sdk-design.md  failure_analysis.md  history.json  index.html  interleaved_output.txt  local_pass.txt  monitor_ci.sh  pf.rules  pr-review-guide.md  pyproject.toml  requirements.md  setup.cfg  setup.py  standalone-activity-todo.md  streaming_implementation_plan.md  test_claude_debug.py  test_claude_format.py  test_debug_claude.py  test_debug_quick.py  test_format_check.py  test_infrastructure.py  test_multiturn_claude.py  test_session_simple.py  test_simple_claude.py  (+2 more)
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: install_release_package.py  release_smoke_package.py  release_verify.py
.github/workflows/: build-binaries.yml  ci.yml  nightly-throughput-stress.yml  nightly.yml  omes.yml  release-publish.yml  run-bench.yml
1158/: index.html
1158/export/: influxDbData.txt
1159/: index.html
1159/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1159/export/: influxDbData.txt  prometheusData.txt
1159/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
1159/widgets/: behaviors.json  categories-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
1162/: index.html
1162/export/: influxDbData.txt
1165/: index.html
1165/export/: influxDbData.txt
docs/: api.rst  conf.py  direct_api.rst  index.rst
docs/_templates/: custom_module_template.rst
junit-xml/: 3.13--ubuntu-arm.xml
last-history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
scripts/: __init__.py  build-bridge.py  cibuildwheel_before_all_linux.sh  cibuildwheel_before_build_linux.sh  fix_wheel.py  gen-protos.py  gen_bridge_client.py  gen_docs.py  gen_nexus_system_api.py  gen_nexus_system_models.py  gen_nexus_system_test_models.py  gen_payload_visitor.py  gen_protos.py  gen_protos_docker.py  gen_visitors.py  list-zombies.sh  native_streams_e2e.py  nex_gen_support.py  prepare_release.py  repro_activity_already_started_error.py  run_bench.py  setup_bridge.py
scripts/_nexus/: temporal-system.wit
scripts/_proto/: Dockerfile  Dockerfile.dockerignore
temporalio/: __init__.py  _asyncio_compat.py  _log_utils.py  _workflow_requests.py  activity.py  client.py  common.py  converter.py  debug-replayer.py  envconfig.py  exceptions.py  extstore.py  failure.py  mywf.py  plugin.py  runtime.py  service.py  types.py  worker.py  workflow.py  workflow_service.py
temporalio/api/: __init__.py
temporalio/bridge/: Cargo.toml  __init__.py  _visitor.py  _visitor_functions.py  client.py  metric.py  runtime.py  services_generated.py  telemetry.py  testing.py  visitor.py  visitor_generated.py  worker.py
temporalio/bridge/proto/: __init__.py  core_interface_pb2.py  core_interface_pb2.pyi
temporalio/bridge/proto/activity_result/: __init__.py  activity_result_pb2.py  activity_result_pb2.pyi
temporalio/bridge/proto/activity_task/: __init__.py  activity_task_pb2.py  activity_task_pb2.pyi  activity_task_pb2_grpc.pyi
temporalio/bridge/proto/bridge/: bridge_pb2.py  bridge_pb2.pyi
temporalio/bridge/proto/child_workflow/: __init__.py  child_workflow_pb2.py  child_workflow_pb2.pyi
temporalio/bridge/proto/common/: __init__.py  common_pb2.py  common_pb2.pyi
temporalio/bridge/proto/external_data/: __init__.py  external_data_pb2.py  external_data_pb2.pyi
temporalio/bridge/proto/health/v1/: __init__.py  health_pb2.py  health_pb2.pyi
temporalio/bridge/proto/nexus/: __init__.py  nexus_pb2.py  nexus_pb2.pyi
temporalio/bridge/proto/workflow_activation/: __init__.py  workflow_activation_pb2.py  workflow_activation_pb2.pyi  workflow_activation_pb2_grpc.pyi
temporalio/bridge/proto/workflow_commands/: __init__.py  workflow_commands_pb2.py  workflow_commands_pb2.pyi  workflow_commands_pb2_grpc.pyi
temporalio/bridge/proto/workflow_completion/: __init__.py  workflow_completion_pb2.py  workflow_completion_pb2.pyi
temporalio/bridge/sdk-bridge/: Cargo.toml
temporalio/bridge/src/: client.rs  client_rpc_generated.rs  envconfig.rs  lib.rs  metric.rs  runtime.rs  telemetry.rs  testing.rs  worker.rs
temporalio/client/: __init__.py  _activity.py  _callback.py  _client.py  _cloud.py  _exceptions.py  _helpers.py  _impl.py  _interceptor.py  _nexus.py  _plugin.py  _schedule.py  _worker_versioning.py  _workflow.py  client.py  workflow_execution.py  workflow_handle.py  workflow_service.py
temporalio/common/: __init__.py  retry_policy.py
temporalio/contrib/: langgraph-phase1-validation.md  opentelemetry.py  opentelemetryv2.py  otel_context.py  pydantic.py
temporalio/converter/: __init__.py  _data_converter.py  _extstore.py  _failure_converter.py  _payload_codec.py  _payload_converter.py  _payload_limits.py  _search_attributes.py  _serialization_context.py  converter.py  plain.py  proto.py
temporalio/nexus/: __init__.py  _completion.py  _decorators.py  _link_conversion.py  _operation_context.py  _operation_handlers.py  _temporal_client.py  _token.py  _util.py  _workflow.py  context.py  handler.py  handler_outtakes.py  token.py
temporalio/streams/: __init__.py  _client.py  _grpc.py  _stream.py  (+2 more)
tests/: __init__.py  conftest.py  converter_test.py  test_activity.py  test_activity_type_errors.py  test_client.py  test_client_exports.py  test_client_type_errors.py  test_cloud.py  test_common.py  test_converter.py  test_envconfig.py  test_exceptions.py  test_extstore.py  test_log_utils.py  test_packaging.py  test_plugins.py  test_prepare_release.py  test_runtime.py  test_serialization_context.py  test_service.py  test_tls.py  test_type_errors.py  test_worker.py  test_workflow.py  test_workflow_exports.py  test_workflow_service.py  test_workflow_type_errors.py
(+2783 files in other folders)
