[project]
name = "temporalio"
version = "1.21.1"
description = "Temporal.io Python SDK"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["temporal", "workflow"]
dependencies = [
  "nexus-rpc==1.3.0",
  "protobuf>=3.20,<7.0.0",
  "python-dateutil>=2.8.2,<3 ; python_version < '3.11'",
  "types-protobuf>=3.20",
  "typing-extensions>=4.2.0,<5",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.48.2,<2"]
opentelemetry = ["opentelemetry-api>=1.11.1,<2", "opentelemetry-sdk>=1.11.1,<2"]
pydantic = ["pydantic>=2.0.0,<3"]
openai-agents = ["openai-agents>=0.3,<0.7", "mcp>=1.9.4, <2"]

[project.urls]
Homepage = "https://github.com/temporalio/sdk-python"
Repository = "https://github.com/temporalio/sdk-python"
Documentation = "https://docs.temporal.io/docs/python"
"Bug Tracker" = "https://github.com/temporalio/sdk-python/issues"

[dependency-groups]
dev = [
  "cibuildwheel>=2.22.0,<3",
  "grpcio-tools>=1.48.2,<2",
  "mypy==1.18.2",
  "mypy-protobuf>=3.3.0,<4",
  "psutil>=5.9.3,<6",
  "pydocstyle>=6.3.0,<7",
  "pydoctor>=25.10.1,<26",
  "pyright==1.1.403",
  "pytest~=7.4",
  "pytest-asyncio>=0.21,<0.22",
  "pytest-timeout~=2.2",
  "ruff>=0.5.0,<0.6",
  "toml>=0.10.2,<0.11",
  "twine>=4.0.1,<5",
  "maturin>=1.8.2",
  "pytest-cov>=6.1.1",
  "httpx>=0.28.1",
  "pytest-pretty>=1.3.0",
  "openai-agents>=0.3,<0.7; python_version >= '3.14'",
  "openai-agents[litellm]>=0.3,<0.7; python_version < '3.14'",
  "googleapis-common-protos==1.70.0",
  "pytest-rerunfailures>=16.1",
]

[tool.poe.tasks]
build-develop = "uv run maturin develop --uv"
build-develop-with-release = { cmd = "uv run maturin develop --release --uv" }
format = [
  { cmd = "uv run ruff check --select I --fix" },
  { cmd = "uv run ruff format" },
  { cmd = "cargo fmt", cwd = "temporalio/bridge" },
]
gen-docs = "uv run scripts/gen_docs.py"
gen-protos = [
  { cmd = "uv run scripts/gen_protos.py" },
  { cmd = "uv run scripts/gen_payload_visitor.py" },
  { cmd = "uv run scripts/gen_bridge_client.py" },
  { ref = "format" },
]
gen-protos-docker = [
  { cmd = "uv run scripts/gen_protos_docker.py" },
  { cmd = "uv run scripts/gen_payload_visitor.py" },
  { cmd = "uv run scripts/gen_bridge_client.py" },
  { ref = "format" },
]
lint = [
  { cmd = "uv run ruff check --select I" },
  { cmd = "uv run ruff format --check" },
  { ref = "lint-types" },
  { ref = "lint-docs" },
]
bridge-lint = { cmd = "cargo clippy -- -D warnings", cwd = "temporalio/bridge" }
# TODO(cretz): Why does pydocstyle complain about @overload missing docs after
# https://github.com/PyCQA/pydocstyle/pull/511?
lint-docs = "uv run pydocstyle --ignore-decorators=overload"
lint-types = [
  { cmd = "uv run pyright" },
  { cmd = "uv run mypy --namespace-packages --check-untyped-defs ." },
]
run-bench = "uv run python scripts/run_bench.py"
test = "uv run pytest"


[tool.pytest.ini_options]
asyncio_mode = "auto"
# Do not use log_cli since this shows logging for all tests, not just the ones
# that failed. Instead, show all logs for failed tests at the end.
log_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
testpaths = ["tests"]
timeout = 60
timeout_func_only = true
filterwarnings = [
  "error::temporalio.workflow.UnfinishedUpdateHandlersWarning",
  "error::temporalio.workflow.UnfinishedSignalHandlersWarning",
  "ignore::pytest.PytestDeprecationWarning",
  "ignore::DeprecationWarning",
]

[tool.cibuildwheel]
before-all = "pip install protoc-wheel-0"
build = "cp310-win_amd64 cp310-manylinux_x86_64 cp310-manylinux_aarch64 cp310-macosx_x86_64 cp310-macosx_arm64"
build-verbosity = 1

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && yum install -y openssl-devel"
before-build = "pip install protoc-wheel-0"
environment = { PATH = "$PATH:$HOME/.cargo/bin", CARGO_NET_GIT_FETCH_WITH_CLI = "true" }

[tool.mypy]
ignore_missing_imports = true
exclude = [
  # Ignore generated code
  'temporalio/api',
  'temporalio/bridge/proto',
]

[tool.pydocstyle]
convention = "google"
# https://github.com/PyCQA/pydocstyle/issues/363#issuecomment-625563088
match_dir = "^(?!(docs|scripts|tests|api|proto|\\.)).*"
add_ignore = [
  # We like to wrap at a certain number of chars, even long summary sentences.
  # https://github.com/PyCQA/pydocstyle/issues/184
  "D205",
  "D415",
]

[tool.pydoctor]
add-package = ["temporalio"]
docformat = "google"
html-output = "build/apidocs"
html-viewsource-base = "https://github.com/temporalio/sdk-python/tree/main"
intersphinx = [
  "https://docs.python.org/3/objects.inv",
  "https://googleapis.dev/python/protobuf/latest/objects.inv",
  "https://opentelemetry-python.readthedocs.io/en/latest/objects.inv",
  "https://nexus-rpc.github.io/sdk-python/objects.inv",
]
privacy = [
  "PRIVATE:temporalio.bridge",
  "PRIVATE:temporalio.types",
  "PRIVATE:temporalio.worker.workflow_sandbox.restrictions",
  "PRIVATE:temporalio.worker.workflow_sandbox.runner",
  "HIDDEN:temporalio.testing.activity",
  "HIDDEN:temporalio.testing.workflow",
  "HIDDEN:temporalio.worker.activity",
  "HIDDEN:temporalio.worker.interceptor",
  "HIDDEN:temporalio.worker.worker",
  "HIDDEN:temporalio.worker.workflow",
  "HIDDEN:temporalio.worker.workflow_instance",
  "HIDDEN:temporalio.worker.workflow_sandbox.importer",
  "HIDDEN:temporalio.worker.workflow_sandbox.in_sandbox",
  "HIDDEN:**.*_pb2*",
]
project-name = "Temporal Python"
sidebar-expand-depth = 2
warnings-as-errors = true

[tool.pyright]
enableTypeIgnoreComments = true
reportAny = "none"
reportCallInDefaultInitializer = "none"
reportExplicitAny = "none"
reportIgnoreCommentWithoutRule = "none"
reportImplicitAbstractClass = "none"
reportImplicitOverride = "none"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportUnannotatedClassAttribute = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "none"
reportUnusedCallResult = "none"
include = ["temporalio", "tests"]
exclude = [
  # Exclude auto generated files
  "temporalio/api",
  "temporalio/bridge/proto",
  "tests/worker/workflow_sandbox/testmodules/proto",
]

[tool.ruff]
target-version = "py39"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "temporalio/bridge/Cargo.toml"
module-name = "temporalio.bridge.temporal_sdk_bridge"
python-packages = ["temporalio"]
include = ["LICENSE"]
exclude = ["temporalio/bridge/target/**/*"]

[tool.uv]
# Prevent uv commands from building the package by default
package = false
