[metadata]
name = temporalio
version = 1.26.0.post1
description = Temporal.io Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/lyft/sdk-python
project_urls =
    Homepage = https://github.com/lyft/sdk-python
    Documentation = https://docs.temporal.io/docs/python
    Repository = https://github.com/lyft/sdk-python
    Bug Tracker = https://github.com/lyft/sdk-python/issues

[options]
python_requires = >=3.10
