[package]
name = "temporal-sdk-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "temporal_sdk_bridge"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
log = "0.4"
once_cell = "1.16"
prost = "0.12"
prost-types = "0.12"
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
pythonize = "0.19"
temporal-client = { version = "0.1.0", path = "./sdk-core/client" }
temporal-sdk-core = { version = "0.1.0", path = "./sdk-core/core", features = ["ephemeral-server"] }
temporal-sdk-core-api = { version = "0.1.0", path = "./sdk-core/core-api" }
temporal-sdk-core-protos = { version = "0.1.0", path = "./sdk-core/sdk-core-protos" }
tokio = "1.26"
tokio-stream = "0.1"
tonic = "0.11"
tracing = "0.1"
url = "2.2"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false
