[package]
name = "temporal-sdk-bridge"
version = "0.1.0"
edition = "2021"
description = "Python sdk-core bridge"
license = "MIT"
repository = "https://github.com/temporalio/sdk-python"
documentation = "https://docs.temporal.io/dev-guide/python"

[package.metadata.maturin]
module-name = "temporalio.bridge.temporal_sdk_bridge"


[lib]
name = "temporal_sdk_bridge"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
prost = "0.14"
pyo3 = { version = "0.25", features = [
    "extension-module",
    "abi3-py310",
    "anyhow",
    "multiple-pymethods",
] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pythonize = "0.25"
temporalio-client = { version = "0.1.0", path = "./sdk-core/crates/client" }
temporalio-common = { version = "0.1.0", path = "./sdk-core/crates/common", features = [
    "envconfig",
]}
temporalio-sdk-core = { version = "0.1.0", path = "./sdk-core/crates/sdk-core", features = [
    "ephemeral-server",
] }
tokio = "1.26"
tokio-stream = "0.1"
tonic = "0.14"
tracing = "0.1"
url = "2.2"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false
